Added a new -create_trade_schema option for self contained compute job example